--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ทะเบียนวัดผลโรงเรียน</title>
+  <title>งานทะเบียนวัดผล บรรหารแจ่มใสวิทยา 1</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -17,6 +17,15 @@
       width: 80%;
       margin: 0 auto;
       padding: 20px;
+    }
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .header img {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 10px;
     }
     .table-container {
       margin-top: 30px;
@@ -41,9 +50,11 @@
 <body>
 
   <div class="container">
-    <header class="text-center">
-      <h1 class="text-3xl font-bold mb-4">ทะเบียนวัดผลโรงเรียน</h1>
-    </header>
+    <!-- Header with School Logo and Title -->
+    <div class="header">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Emblem_of_the_School_of_Science_and_Technology.png" alt="ตราโรงเรียน">
+      <h1 class="text-3xl font-bold mb-4">งานทะเบียนวัดผล บรรหารแจ่มใสวิทยา 1</h1>
+    </div>
 
     <!-- ฟอร์มค้นหาข้อมูลนักเรียน -->
     <div class="form-container">
