--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <body>
   <div class="wrapper">
     <header>
-      เด็กดีของเสดสิ่ง67
+      งานทะเบียนวัดผล โรงเรียนบรรหารแจ่มใสวิทยา 1
       <div class="header-buttons">
         <button id="dark-mode-toggle" aria-label="สลับโหมดกลางวัน/กลางคืน">🌙</button>
       </div>
@@ -291,8 +291,8 @@
 
     <div class="content">
       <div class="countdown-container">
-        <div>วันสอบกลางภาค ภาคต้น 2568</div>
-        <div>วันที่ 9 สิงหาคม 2025 - วันที่ 17 สิงหาคม 2025</div>
+        <div>วันสุดท้ายของการส่งคะแนนครึ่งภาคเรียนแรก</div>
+        <div>วันที่ 29 กรกฏาคม 2025 - วันที่ 22 กันยายน 2025</div>
         <div id="countdown" class="countdown-time"></div>
       </div>
       
@@ -366,13 +366,10 @@
   <div class="max-w-6xl mx-auto px-4 py-12">
   
   <!-- กล่องกลางภาค -->
-  <div class="exam-box midterm">
-    (-ร่าง-) ตารางสอบกลางภาค ประจำภาคต้น 2568
-    <div class="badge-new">NEW</div>
-  </div>
-  <div style="text-align: center; margin-bottom: 10px;">Updated 16 มิถุนายน 2568</div>
   <img src="ร่างตารางสอบกลางภาค.JPG" alt="Me" width="800"
     style="display: block; margin: 0 auto 20px auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); border-radius: 8px;">
+  <div class="exam-box midterm">
+    (-ร่าง-) ตารางสอบกลางภาค ประจำภาคต้น 2568
 
   <!-- กล่องปลายภาค -->
   <div class="exam-box final">
@@ -449,12 +446,12 @@
   <div id="popup">📄 พบข้อมูลตารางสอบแล้ว!</div>
 
   <script>
-    const targetDate = new Date(2025, 7, 9, 8, 30, 0);
+    const targetDate = new Date(2025, 8, 22, 23, 59, 59);
     function updateCountdown() {
       const now = new Date();
       const diff = targetDate - now;
       if (diff <= 0) {
-        document.getElementById('countdown').textContent = 'วันสอบกลางภาค ประจำภาคต้น 2568';
+        document.getElementById('countdown').textContent = 'ปิดระบบส่งคะแนนครึ่งภาคเรียนแรกแล้ว';
         clearInterval(intervalId);
         return;
       }
