--- a/index.html
+++ b/index.html
@@ -362,6 +362,9 @@
     }
   </style>
 </head>
+
+<img src="กยศรายใหม่.jpg" alt="Me" width="200"
+        style="display: block; margin: 0 auto 20px auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); border-radius: 8px;">
         
       <div class="sub-menu">
   <a href="kyos.html"><i class="fas fa-hand-holding-dollar"></i>กยศ</a>
