--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   </style>
 </head>
 
-<img src="กยศรายใหม่.jpg" alt="Me" width="200"
+<img src="72100461_0_20200617-070925.jpg" alt="Me" width="200"
         style="display: block; margin: 0 auto 20px auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); border-radius: 8px;">
         
       <div class="sub-menu">
