--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
 
 <img src="72100461_0_20200617-070925.jpg" alt="Me" width="200"
         style="display: block; margin: 0 auto 20px auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); border-radius: 8px;">
+<div>วันสุดท้ายของการส่งคะแนนครึ่งภาคเรียนแรก</div>
         
       <div class="sub-menu">
   <a href="kyos.html"><i class="fas fa-hand-holding-dollar"></i>กยศ</a>
