--- a/index.html
+++ b/index.html
@@ -363,10 +363,18 @@
   </style>
 </head>
 
-<img src="72100461_0_20200617-070925.jpg" alt="Me" width="120"
-     style="display: block; margin: 0 auto 20px auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); border-radius: 8px;">
-<div style="text-align: center;">นายณัฐวุฒิ สุดโต</div>
-<div style="text-align: center;">หัวหน้ากลุ่มงานวัดผล</div>
+<div style="display: flex; align-items: center; justify-content: center;">
+  <img src="72100461_0_20200617-070925.jpg" alt="Me" width="80"
+       style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); border-radius: 8px;">
+  <div style="margin-left: 15px; text-align: left;">
+    <div>นายณัฐวุฒิ สุดโต</div>
+    <div>หัวหน้ากลุ่มงานวัดผล</div>
+  </div>
+  <div style="margin-left: 15px; text-align: left;">
+    <div>นายสมชาย ใจดี</div>
+    <div>รองหัวหน้ากลุ่มงานวัดผล</div>
+  </div>
+</div>
         
       <div class="sub-menu">
   <a href="kyos.html"><i class="fas fa-hand-holding-dollar"></i>กยศ</a>
