--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             min-height: 100vh;
         }
 
-        /* Sidebar */
+        /* Sidebar Design */
         aside {
             background-color: var(--white);
             border-right: 1px solid rgba(0,0,0,0.05);
@@ -60,7 +60,7 @@
         .nav-link:hover, .nav-link.active { background-color: var(--primary-light); color: var(--primary); }
         .nav-link.active { background-color: var(--primary); color: var(--white); }
 
-        /* Main Content */
+        /* Main Content Area */
         main { padding: 2rem; max-width: 1200px; margin: 0 auto; width: 100%; }
 
         header.top-bar {
@@ -85,40 +85,39 @@
         .stats-header { display: flex; align-items: center; gap: 10px; margin-bottom: 1.2rem; border-left: 4px solid var(--primary); padding-left: 10px; }
         .stats-header h3 { font-size: 1.2rem; color: var(--primary); font-weight: 700; }
         .stats-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; }
-        .stat-card { background: var(--white); padding: 1.2rem; border-radius: 20px; box-shadow: var(--shadow); display: flex; align-items: center; gap: 1rem; transition: 0.3s; }
+        .stat-card { background: var(--white); padding: 1.2rem; border-radius: 20px; box-shadow: var(--shadow); display: flex; align-items: center; gap: 1rem; transition: 0.3s; border: 1px solid rgba(0,0,0,0.02); }
         .stat-card:hover { transform: translateY(-5px); }
         .stat-icon { width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 1.2rem; }
         .icon-subjects { background: #e8f2ff; color: #007bff; }
         .icon-teachers { background: #f0fdf4; color: #198754; }
         .icon-students { background: #fff9db; color: #f59f00; }
         .icon-rooms { background: #fef2f2; color: #dc3545; }
+        .stat-value { font-size: 1.4rem; font-weight: 700; color: var(--text-main); line-height: 1.2; display: block; }
+        .stat-label { font-size: 0.8rem; color: var(--secondary); font-weight: 500; }
 
-        /* News Section Design */
-        .news-container { display: flex; flex-direction: column; gap: 12px; }
-        .news-card {
-            display: flex; align-items: center; gap: 15px; padding: 12px; background: #fff;
-            border-radius: 16px; text-decoration: none; color: inherit; transition: 0.3s; border: 1px solid rgba(0,0,0,0.05);
-        }
-        .news-card:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(0,0,0,0.05); border-color: var(--primary-light); }
-        .news-date-box { width: 55px; height: 55px; background: var(--primary-light); color: var(--primary); display: flex; flex-direction: column; align-items: center; justify-content: center; border-radius: 12px; flex-shrink: 0; }
-        .news-date-box .day { font-size: 1.1rem; font-weight: 700; line-height: 1; }
-        .news-date-box .month { font-size: 0.65rem; font-weight: 600; }
-        .news-tag { font-size: 0.65rem; font-weight: 700; padding: 2px 8px; border-radius: 6px; margin-bottom: 4px; display: inline-block; }
-        .tag-urgent { background: #fff5f5; color: #e03131; border: 1px solid #ffc9c9; }
-        .tag-info { background: #e7f5ff; color: #1971c2; border: 1px solid #a5d8ff; }
-        .news-title { font-size: 0.9rem; font-weight: 600; color: var(--text-main); display: block; }
-        .news-desc { font-size: 0.75rem; color: var(--secondary); display: block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
-
-        /* Grid System */
+        /* Grid System for News & Status */
         .content-grid { display: grid; grid-template-columns: 2fr 1fr; gap: 2rem; }
         .card { background: var(--white); padding: 1.5rem; border-radius: 20px; box-shadow: var(--shadow); margin-bottom: 2rem; }
-        .card-title { display: flex; align-items: center; justify-content: space-between; font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--primary); }
+        .card-title { display: flex; align-items: center; gap: 10px; font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--primary); }
 
+        /* Classic News List Style (ต้นฉบับ) */
+        .news-list-classic { display: flex; flex-direction: column; }
+        .news-item-classic {
+            display: flex; align-items: center; gap: 12px; padding: 12px 10px;
+            text-decoration: none; color: var(--text-main); border-bottom: 1px solid #eee; transition: 0.2s;
+        }
+        .news-item-classic:last-child { border-bottom: none; }
+        .news-item-classic:hover { background-color: var(--primary-light); padding-left: 15px; color: var(--primary); }
+        .date-label { font-weight: 700; color: var(--primary); min-width: 90px; font-size: 0.9rem; }
+        .news-text { font-size: 0.95rem; flex-grow: 1; }
+        .icon-bullet { font-size: 0.6rem; color: var(--secondary); opacity: 0.5; }
+
+        /* Status & Sidebar Tools */
         .status-row { display: flex; justify-content: space-between; align-items: center; padding: 10px 0; border-bottom: 1px solid #eee; }
         .badge { padding: 4px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: 600; }
         .badge-success { background: #d4edda; color: #155724; }
         .badge-danger { background: #f8d7da; color: #721c24; }
-        .btn-download { background: var(--primary); color: white; padding: 12px; border-radius: 12px; text-decoration: none; display: flex; align-items: center; gap: 10px; justify-content: center; font-weight: 600; }
+        .btn-download { background: var(--primary); color: white; padding: 12px; border-radius: 12px; text-decoration: none; display: flex; align-items: center; gap: 10px; width: 100%; justify-content: center; font-weight: 600; }
 
         @media (max-width: 1024px) {
             .dashboard-container { grid-template-columns: 1fr; }
@@ -139,6 +138,11 @@
                 <li class="nav-item"><a href="#" class="nav-link active"><i class="fas fa-th-large"></i> หน้าแรก</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-calendar-alt"></i> ปฏิทินวิชาการ</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users"></i> บุคลากร</a></li>
+            </ul>
+            <p class="nav-label" style="margin-top: 2rem;">Portal</p>
+            <ul class="nav-menu">
+                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-user-graduate"></i> ระบบนักเรียน</a></li>
+                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-chalkboard-teacher"></i> ระบบคุณครู</a></li>
             </ul>
         </nav>
     </aside>
@@ -161,29 +165,54 @@
         </section>
 
         <section class="stats-container">
-            <div class="stats-header"><i class="fas fa-chart-pie" style="color: var(--primary);"></i><h3>สถิติงานวิชาการ ภาคเรียนที่ 2 ปีการศึกษา 2568</h3></div>
+            <div class="stats-header">
+                <i class="fas fa-chart-pie" style="color: var(--primary);"></i>
+                <h3>สถิติงานวิชาการ ภาคเรียนที่ 2 ปีการศึกษา 2568</h3>
+            </div>
             <div class="stats-grid">
-                <div class="stat-card"><div class="stat-icon icon-subjects"><i class="fas fa-book"></i></div><div class="stat-info"><span class="stat-value">425</span><span class="stat-label">วิชาที่เปิดสอน</span></div></div>
-                <div class="stat-card"><div class="stat-icon icon-teachers"><i class="fas fa-chalkboard-teacher"></i></div><div class="stat-info"><span class="stat-value">128</span><span class="stat-label">จำนวนครู</span></div></div>
-                <div class="stat-card"><div class="stat-icon icon-students"><i class="fas fa-user-graduate"></i></div><div class="stat-info"><span class="stat-value">2,450</span><span class="stat-label">จำนวนนักเรียน</span></div></div>
-                <div class="stat-card"><div class="stat-icon icon-rooms"><i class="fas fa-door-open"></i></div><div class="stat-info"><span class="stat-value">56</span><span class="stat-label">ห้องเรียน</span></div></div>
+                <div class="stat-card">
+                    <div class="stat-icon icon-subjects"><i class="fas fa-book"></i></div>
+                    <div class="stat-info"><span class="stat-value">425</span><span class="stat-label">วิชาที่เปิดสอน</span></div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-icon icon-teachers"><i class="fas fa-chalkboard-teacher"></i></div>
+                    <div class="stat-info"><span class="stat-value">128</span><span class="stat-label">จำนวนครู</span></div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-icon icon-students"><i class="fas fa-user-graduate"></i></div>
+                    <div class="stat-info"><span class="stat-value">2,450</span><span class="stat-label">จำนวนนักเรียน</span></div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-icon icon-rooms"><i class="fas fa-door-open"></i></div>
+                    <div class="stat-info"><span class="stat-value">56</span><span class="stat-label">จำนวนห้องเรียน</span></div>
+                </div>
             </div>
         </section>
 
         <div class="content-grid">
             <div class="left-col">
                 <div class="card">
-                    <div class="card-title"><span><i class="fas fa-bullhorn"></i> ข่าวประชาสัมพันธ์ล่าสุด</span><a href="#" style="font-size: 0.75rem; text-decoration: none; color: var(--primary);">ดูทั้งหมด</a></div>
-                    <div class="news-container">
-                        <a href="#" class="news-card">
-                            <div class="news-date-box"><span class="day">30</span><span class="month">ก.ย. 68</span></div>
-                            <div class="news-content"><span class="news-tag tag-urgent">ด่วนที่สุด</span><span class="news-title">ประกาศห้องสอบปลายภาคเรียนที่ 1/2568</span><span class="news-desc">ตรวจสอบรายชื่อและผังที่นั่งสอบได้ที่บอร์ดหน้างานทะเบียน...</span></div>
-                            <div style="color: #ddd;"><i class="fas fa-chevron-right"></i></div>
+                    <div class="card-title"><i class="fas fa-bullhorn"></i> ข่าวประชาสัมพันธ์ล่าสุด</div>
+                    <div class="news-list-classic">
+                        <a href="#" class="news-item-classic">
+                            <i class="fas fa-circle icon-bullet"></i>
+                            <span class="date-label">[30/ก.ย. 68]</span>
+                            <span class="news-text">ประกาศห้องสอบปลายภาคเรียนที่ 1 ปีการศึกษา 2568</span>
                         </a>
-                        <a href="#" class="news-card">
-                            <div class="news-date-box"><span class="day">22</span><span class="month">ก.ย. 68</span></div>
-                            <div class="news-content"><span class="news-tag tag-info">ประกาศ</span><span class="news-title">แจ้งกำหนดการรับรองผลการเรียน และแก้ไข 0, ร, มส.</span><span class="news-desc">ให้นักเรียนติดต่อครูประจำวิชาภายในวันที่กำหนด...</span></div>
-                            <div style="color: #ddd;"><i class="fas fa-chevron-right"></i></div>
+                        <a href="#" class="news-item-classic">
+                            <i class="fas fa-circle icon-bullet"></i>
+                            <span class="date-label">[22/ก.ย. 68]</span>
+                            <span class="news-text">แจ้งกำหนดการรับรองผลการเรียน และแก้ไข 0, ร, มส.</span>
+                        </a>
+                        <a href="#" class="news-item-classic">
+                            <i class="fas fa-circle icon-bullet"></i>
+                            <span class="date-label">[08/ส.ค. 68]</span>
+                            <span class="news-text">กำหนดการส่งเกรดภาคเรียนที่ 1/2568 ไม่เกินวันที่ 19 ก.ย. 68</span>
+                        </a>
+                        <a href="#" class="news-item-classic">
+                            <i class="fas fa-circle icon-bullet"></i>
+                            <span class="date-label">[29/ก.ค. 68]</span>
+                            <span class="news-text">เปิดระบบ SGS ภาคเรียนที่ 1/2568</span>
                         </a>
                     </div>
                 </div>
@@ -198,12 +227,15 @@
                 </div>
                 <div class="card">
                     <div class="card-title"><i class="fas fa-file-download"></i> เอกสารคำร้อง</div>
-                    <p style="font-size: 0.75rem; color: #888; margin-bottom: 1rem;">ดาวน์โหลดแบบฟอร์ม ปพ.1 หรือคำร้อง</p>
-                    <a href="#" class="btn-download"><i class="fas fa-cloud-download-alt"></i> ดาวน์โหลดไฟล์</a>
+                    <p style="font-size: 0.8rem; color: #888; margin-bottom: 1rem;">ดาวน์โหลดแบบฟอร์ม ปพ.1 หรือคำร้องออนไลน์</p>
+                    <a href="#" class="btn-download"><i class="fas fa-cloud-download-alt"></i> ดาวน์โหลดไฟล์ (PDF)</a>
                 </div>
             </div>
         </div>
-        <footer style="text-align: center; color: #888; font-size: 0.75rem; padding-bottom: 2rem;">&copy; 2024 งานทะเบียนวัดผล โรงเรียนบรรหารแจ่มใสวิทยา 1</footer>
+        
+        <footer style="text-align: center; color: #888; font-size: 0.75rem; padding-bottom: 2rem;">
+            &copy; 2024 งานทะเบียนวัดผล โรงเรียนบรรหารแจ่มใสวิทยา 1 | พัฒนาโดย ฝ่าย ICT
+        </footer>
     </main>
 </div>
 
