--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             min-height: 100vh;
         }
 
-        /* Sidebar Design */
+        /* Sidebar */
         aside {
             background-color: var(--white);
             border-right: 1px solid rgba(0,0,0,0.05);
@@ -85,7 +85,7 @@
         .stats-header { display: flex; align-items: center; gap: 10px; margin-bottom: 1.2rem; border-left: 4px solid var(--primary); padding-left: 10px; }
         .stats-header h3 { font-size: 1.2rem; color: var(--primary); font-weight: 700; }
         .stats-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; }
-        .stat-card { background: var(--white); padding: 1.2rem; border-radius: 20px; box-shadow: var(--shadow); display: flex; align-items: center; gap: 1rem; transition: 0.3s; border: 1px solid rgba(0,0,0,0.02); }
+        .stat-card { background: var(--white); padding: 1.2rem; border-radius: 20px; box-shadow: var(--shadow); display: flex; align-items: center; gap: 1rem; transition: 0.3s; }
         .stat-card:hover { transform: translateY(-5px); }
         .stat-icon { width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 1.2rem; }
         .icon-subjects { background: #e8f2ff; color: #007bff; }
@@ -95,35 +95,39 @@
         .stat-value { font-size: 1.4rem; font-weight: 700; color: var(--text-main); line-height: 1.2; display: block; }
         .stat-label { font-size: 0.8rem; color: var(--secondary); font-weight: 500; }
 
-        /* Grid System for News & Status */
-        .content-grid { display: grid; grid-template-columns: 2fr 1fr; gap: 2rem; }
-        .card { background: var(--white); padding: 1.5rem; border-radius: 20px; box-shadow: var(--shadow); margin-bottom: 2rem; }
-        .card-title { display: flex; align-items: center; gap: 10px; font-size: 1.1rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--primary); }
+        /* News Section (Grid Style จากรูปภาพ) */
+        .news-section-wrapper { margin-bottom: 2rem; }
+        .news-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 1.5rem; }
+        .news-header h3 { border-left: 5px solid var(--primary); padding-left: 15px; font-size: 1.4rem; color: var(--text-main); }
+        .btn-view-all { padding: 6px 16px; border: 1px solid var(--primary); border-radius: 20px; font-size: 0.8rem; color: var(--primary); text-decoration: none; transition: 0.3s; }
+        .btn-view-all:hover { background: var(--primary); color: #fff; }
 
-        /* Classic News List Style (ต้นฉบับ) */
-        .news-list-classic { display: flex; flex-direction: column; }
-        .news-item-classic {
-            display: flex; align-items: center; gap: 12px; padding: 12px 10px;
-            text-decoration: none; color: var(--text-main); border-bottom: 1px solid #eee; transition: 0.2s;
+        .news-grid-custom { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; }
+        .news-card-item {
+            background: #fff; border-radius: 15px; padding: 20px; display: flex; gap: 15px;
+            text-decoration: none; color: inherit; border: 1px solid rgba(0,0,0,0.05); transition: 0.3s; box-shadow: var(--shadow);
         }
-        .news-item-classic:last-child { border-bottom: none; }
-        .news-item-classic:hover { background-color: var(--primary-light); padding-left: 15px; color: var(--primary); }
-        .date-label { font-weight: 700; color: var(--primary); min-width: 90px; font-size: 0.9rem; }
-        .news-text { font-size: 0.95rem; flex-grow: 1; }
-        .icon-bullet { font-size: 0.6rem; color: var(--secondary); opacity: 0.5; }
+        .news-card-item:hover { transform: translateY(-5px); border-color: var(--primary-light); }
+        .news-thumb { width: 80px; height: 80px; background: #f8f9fa; border-radius: 12px; flex-shrink: 0; display: flex; align-items: center; justify-content: center; overflow: hidden; border: 1px solid #eee; }
+        .news-thumb img { width: 100%; height: 100%; object-fit: contain; padding: 5px; }
+        .news-card-body { flex-grow: 1; display: flex; flex-direction: column; justify-content: center; }
+        .news-card-date { font-size: 0.8rem; color: #007bff; font-weight: 600; margin-bottom: 4px; }
+        .news-card-title { font-size: 1rem; font-weight: 700; color: var(--text-main); margin-bottom: 4px; }
+        .news-card-desc { font-size: 0.85rem; color: #666; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; overflow: hidden; }
 
-        /* Status & Sidebar Tools */
+        /* Status & Right Column */
+        .content-grid { display: grid; grid-template-columns: 1fr; gap: 2rem; } /* ปรับให้ News เต็มความกว้าง แล้วเอา Status ไว้ข้างล่างหรือข้างๆ */
+        .card { background: var(--white); padding: 1.5rem; border-radius: 20px; box-shadow: var(--shadow); margin-bottom: 2rem; }
         .status-row { display: flex; justify-content: space-between; align-items: center; padding: 10px 0; border-bottom: 1px solid #eee; }
         .badge { padding: 4px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: 600; }
         .badge-success { background: #d4edda; color: #155724; }
         .badge-danger { background: #f8d7da; color: #721c24; }
-        .btn-download { background: var(--primary); color: white; padding: 12px; border-radius: 12px; text-decoration: none; display: flex; align-items: center; gap: 10px; width: 100%; justify-content: center; font-weight: 600; }
+        .btn-download { background: var(--primary); color: white; padding: 12px; border-radius: 12px; text-decoration: none; display: flex; align-items: center; gap: 10px; justify-content: center; font-weight: 600; }
 
         @media (max-width: 1024px) {
             .dashboard-container { grid-template-columns: 1fr; }
             aside { display: none; }
-            .content-grid { grid-template-columns: 1fr; }
-            .stats-grid { grid-template-columns: repeat(2, 1fr); }
+            .news-grid-custom { grid-template-columns: 1fr; }
         }
     </style>
 </head>
@@ -138,11 +142,6 @@
                 <li class="nav-item"><a href="#" class="nav-link active"><i class="fas fa-th-large"></i> หน้าแรก</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-calendar-alt"></i> ปฏิทินวิชาการ</a></li>
                 <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-users"></i> บุคลากร</a></li>
-            </ul>
-            <p class="nav-label" style="margin-top: 2rem;">Portal</p>
-            <ul class="nav-menu">
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-user-graduate"></i> ระบบนักเรียน</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-chalkboard-teacher"></i> ระบบคุณครู</a></li>
             </ul>
         </nav>
     </aside>
@@ -165,77 +164,55 @@
         </section>
 
         <section class="stats-container">
-            <div class="stats-header">
-                <i class="fas fa-chart-pie" style="color: var(--primary);"></i>
-                <h3>สถิติงานวิชาการ ภาคเรียนที่ 2 ปีการศึกษา 2568</h3>
-            </div>
+            <div class="stats-header"><i class="fas fa-chart-pie" style="color: var(--primary);"></i><h3>สถิติงานวิชาการ ภาคเรียนที่ 2 ปีการศึกษา 2568</h3></div>
             <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-icon icon-subjects"><i class="fas fa-book"></i></div>
-                    <div class="stat-info"><span class="stat-value">425</span><span class="stat-label">วิชาที่เปิดสอน</span></div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon icon-teachers"><i class="fas fa-chalkboard-teacher"></i></div>
-                    <div class="stat-info"><span class="stat-value">128</span><span class="stat-label">จำนวนครู</span></div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon icon-students"><i class="fas fa-user-graduate"></i></div>
-                    <div class="stat-info"><span class="stat-value">2,450</span><span class="stat-label">จำนวนนักเรียน</span></div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon icon-rooms"><i class="fas fa-door-open"></i></div>
-                    <div class="stat-info"><span class="stat-value">56</span><span class="stat-label">จำนวนห้องเรียน</span></div>
-                </div>
+                <div class="stat-card"><div class="stat-icon icon-subjects"><i class="fas fa-book"></i></div><div class="stat-info"><span class="stat-value">425</span><span class="stat-label">วิชาที่เปิดสอน</span></div></div>
+                <div class="stat-card"><div class="stat-icon icon-teachers"><i class="fas fa-chalkboard-teacher"></i></div><div class="stat-info"><span class="stat-value">128</span><span class="stat-label">จำนวนครู</span></div></div>
+                <div class="stat-card"><div class="stat-icon icon-students"><i class="fas fa-user-graduate"></i></div><div class="stat-info"><span class="stat-value">2,450</span><span class="stat-label">จำนวนนักเรียน</span></div></div>
+                <div class="stat-card"><div class="stat-icon icon-rooms"><i class="fas fa-door-open"></i></div><div class="stat-info"><span class="stat-value">56</span><span class="stat-label">ห้องเรียน</span></div></div>
             </div>
         </section>
 
-        <div class="content-grid">
-            <div class="left-col">
-                <div class="card">
-                    <div class="card-title"><i class="fas fa-bullhorn"></i> ข่าวประชาสัมพันธ์ล่าสุด</div>
-                    <div class="news-list-classic">
-                        <a href="#" class="news-item-classic">
-                            <i class="fas fa-circle icon-bullet"></i>
-                            <span class="date-label">[30/ก.ย. 68]</span>
-                            <span class="news-text">ประกาศห้องสอบปลายภาคเรียนที่ 1 ปีการศึกษา 2568</span>
-                        </a>
-                        <a href="#" class="news-item-classic">
-                            <i class="fas fa-circle icon-bullet"></i>
-                            <span class="date-label">[22/ก.ย. 68]</span>
-                            <span class="news-text">แจ้งกำหนดการรับรองผลการเรียน และแก้ไข 0, ร, มส.</span>
-                        </a>
-                        <a href="#" class="news-item-classic">
-                            <i class="fas fa-circle icon-bullet"></i>
-                            <span class="date-label">[08/ส.ค. 68]</span>
-                            <span class="news-text">กำหนดการส่งเกรดภาคเรียนที่ 1/2568 ไม่เกินวันที่ 19 ก.ย. 68</span>
-                        </a>
-                        <a href="#" class="news-item-classic">
-                            <i class="fas fa-circle icon-bullet"></i>
-                            <span class="date-label">[29/ก.ค. 68]</span>
-                            <span class="news-text">เปิดระบบ SGS ภาคเรียนที่ 1/2568</span>
-                        </a>
-                    </div>
-                </div>
+        <div class="news-section-wrapper">
+            <div class="news-header">
+                <h3>ข่าวประชาสัมพันธ์ล่าสุด</h3>
+                <a href="#" class="btn-view-all">ดูข่าวทั้งหมด <i class="fas fa-arrow-right" style="font-size: 0.7rem;"></i></a>
             </div>
-
-            <div class="right-col">
-                <div class="card">
-                    <div class="card-title"><i class="fas fa-info-circle"></i> สถานะระบบ</div>
-                    <div class="status-row"><span>ปีการศึกษา</span><strong>2568/2</strong></div>
-                    <div class="status-row"><span>บันทึกผลการเรียน</span><span class="badge badge-danger">ปิดระบบ</span></div>
-                    <div class="status-row"><span>ประกาศผลสอบ</span><span class="badge badge-success">เปิดปกติ</span></div>
-                </div>
-                <div class="card">
-                    <div class="card-title"><i class="fas fa-file-download"></i> เอกสารคำร้อง</div>
-                    <p style="font-size: 0.8rem; color: #888; margin-bottom: 1rem;">ดาวน์โหลดแบบฟอร์ม ปพ.1 หรือคำร้องออนไลน์</p>
-                    <a href="#" class="btn-download"><i class="fas fa-cloud-download-alt"></i> ดาวน์โหลดไฟล์ (PDF)</a>
-                </div>
+            <div class="news-grid-custom">
+                <a href="#" class="news-card-item">
+                    <div class="news-thumb"><img src="https://via.placeholder.com/80/004d99/ffffff?text=LOGO" alt="logo"></div>
+                    <div class="news-card-body">
+                        <div class="news-card-date"><i class="far fa-calendar-alt"></i> 20/12/2025</div>
+                        <div class="news-card-title">การเปลี่ยนตัว/เพิ่ม/ร้องเรียน</div>
+                        <div class="news-card-desc">การเปลี่ยนตัว/เพิ่ม/ร้องเรียน ของผู้เข้าประกวด แข่งขัน...</div>
+                    </div>
+                </a>
+                <a href="#" class="news-card-item">
+                    <div class="news-thumb"><img src="https://via.placeholder.com/80/004d99/ffffff?text=LOGO" alt="logo"></div>
+                    <div class="news-card-body">
+                        <div class="news-card-date"><i class="far fa-calendar-alt"></i> 03/12/2025</div>
+                        <div class="news-card-title">ข้อมูลผู้ประสานงาน</div>
+                        <div class="news-card-desc">ข้อมูลผู้ประสานงาน การจัดการประกวด แข่งขัน งานศิลปะ...</div>
+                    </div>
+                </a>
             </div>
         </div>
-        
-        <footer style="text-align: center; color: #888; font-size: 0.75rem; padding-bottom: 2rem;">
-            &copy; 2024 งานทะเบียนวัดผล โรงเรียนบรรหารแจ่มใสวิทยา 1 | พัฒนาโดย ฝ่าย ICT
-        </footer>
+
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+            <div class="card">
+                <div style="display: flex; align-items: center; gap: 10px; color: var(--primary); font-weight: 700; margin-bottom: 1.5rem;"><i class="fas fa-info-circle"></i> สถานะระบบ</div>
+                <div class="status-row"><span>ปีการศึกษา</span><strong>2568/2</strong></div>
+                <div class="status-row"><span>บันทึกผลการเรียน</span><span class="badge badge-danger">ปิดระบบ</span></div>
+                <div class="status-row"><span>ประกาศผลสอบ</span><span class="badge badge-success">เปิดปกติ</span></div>
+            </div>
+            <div class="card">
+                <div style="display: flex; align-items: center; gap: 10px; color: var(--primary); font-weight: 700; margin-bottom: 1.5rem;"><i class="fas fa-file-download"></i> เอกสารคำร้อง</div>
+                <p style="font-size: 0.75rem; color: #888; margin-bottom: 1rem;">ดาวน์โหลดแบบฟอร์ม ปพ.1 หรือคำร้องออนไลน์</p>
+                <a href="#" class="btn-download"><i class="fas fa-cloud-download-alt"></i> ดาวน์โหลดไฟล์ (PDF)</a>
+            </div>
+        </div>
+
+        <footer style="text-align: center; color: #888; font-size: 0.75rem; margin-top: 2rem;">&copy; 2024 งานทะเบียนวัดผล โรงเรียนบรรหารแจ่มใสวิทยา 1</footer>
     </main>
 </div>
 
